<resources>
    <string name="app_name">TestAndroidVacc24</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="auth_label">Авторизация</string>
    <string name="greeting_label">С возвращением! Авторизуйтесь, чтобы войти в приложение</string>
    <string name="email_login_input_hint">Введите вашу почту</string>
    <string name="password_input_hint">Введите ваш пароль</string>
    <string name="auth_button_text">Авторизоваться</string>
    <string name="registration_hint_text">У вас еще нет аккаунта?</string>
    <string name="registration_button_text">Зарегистрироваться</string>
    <string name="shopping_cart_button_text">Кнопка, которая переносит вас на страницу с вашими покупками</string>
    <string name="product_image_content_description">Изображение товара</string>
</resources>