<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="80dp"
        android:text="@string/auth_label"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textStyle="bold"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/greeting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/greeting_label"
        android:maxLines="2"
        app:layout_constraintTop_toBottomOf="@id/label"
        android:layout_marginStart="20dp"
        />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/greeting">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email_login_input_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/emailInputLayout">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password_input_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/authButton"
        android:text="@string/auth_button_text"
        app:layout_constraintTop_toBottomOf="@id/passwordInputLayout"
        android:layout_margin="20dp"
        app:cornerRadius="8dp"
        />

    <TextView
        android:id="@+id/registration_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration_hint_text"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@id/registrationButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="70dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registrationButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registration_button_text"
        style="?materialButtonOutlinedStyle"
        app:cornerRadius="8dp"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>